--- a/vlad/vlad.css
+++ b/vlad/vlad.css
@@ -1,19 +1,16 @@
 body{
-background:fixed 100% linear-gradient(to top left, #fdfdf2, #ffffff);
-
-	
+	background:fixed 100% linear-gradient(to top left, #fdfdf2, #ffffff);
 }
 #V_DivHeader{
-	background-color:#fefefe;
-	font-weight: bold;
+	font-size: 30pt;
 	height:62px;
 	width:60%;
 	font-style: italic;
-	padding-bottom: 20px;
-	border:1px solid #eee;
+	padding-bottom: 40px;
+	color:#444;
+	font-family: "cursive"; 
 }
-.V_BattonBlock
-{
+.V_BattonBlock{
 	margin-left: 7px;
 	margin-right: 7px;
 	cursor:pointer;
@@ -21,24 +18,19 @@ background:fixed 100% linear-gradient(to top left, #fdfdf2, #ffffff);
 	height:30px;
 	width:120px;
 	float:left;
-	
-border: 1px solid;
-border-radius: 10px;
-border-color:#999;
-background: linear-gradient(to top left, #f4f4f3, #ffffff);
+	border: 1px solid;
+	border-radius: 10px;
+	border-color:#999;
+	background: linear-gradient(to top left, #f4f4f3, #ffffff);
 }
 .V_BattonBlock:hover{
 	background: linear-gradient(to top, #fff, #fff);
-border-color:#444;
+	border-color:#444;
 }
 
-#V_BlockParent
-{
-margin-top:20px;
-
-width: 100%;
-
-
+#V_BlockParent{
+	margin-top:20px;
+	width: 100%;
     top: 0;
     left: 0;
     display: flex;
@@ -46,4 +38,35 @@ width: 100%;
     align-content: center; 
     justify-content: center; 
     overflow: auto;   
+}
+
+#ButtonClosePopup{
+	margin-left: 7px;
+	margin-right: 7px;
+	cursor:pointer;
+	padding-top:10px;
+	height:30px;
+	width:120px;
+	float:left;
+	border: 1px solid;
+	border-radius: 10px;
+	border-color:#999;
+	position:absolute;bottom:0;right:0;
+	background: linear-gradient(to top left, #f4f4f3, #ffffff);
+}
+.popup{
+    visibility: hidden;
+    position:absolute;
+    margin-top:10%;
+    margin-left:10%;
+    width:80%;
+    height:60%;
+    background-color: #555;
+
+
+    z-index: 1;
+}
+
+.show{
+   visibility: visible;
 }
